Cofiguracao do readme completo

--- a/teste_2.ipynb
+++ b/teste_2.ipynb
@@ -2,23 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tempo de execução da ação ABEV3: 1.14 minutos\n",
-      "Tempo de execução da ação AZUL4: 0.74 minutos\n",
-      "Tempo de execução da ação B3SA3: 1.52 minutos\n"
+      "Tempo de execução da ação ABEV3: 0.02 minutos\n",
+      "Tempo de execução da ação AZUL4: 0.02 minutos\n",
+      "Tempo de execução da ação B3SA3: 0.02 minutos\n"
      ]
     }
    ],
    "source": [
     "import sys\n",
     "sys.path.append('..')\n",
-    "from FundamentsStockBrazil.RelativePrices import PrecosRelativosDataScraper\n",
+    "from FundamentsStockBrazil.SetorSubsetor import SetorDataScraper\n",
     "from selenium.webdriver.chrome.service import Service\n",
     "from selenium.webdriver.chrome.options import Options\n",
     "\n",
@@ -38,17 +38,14 @@
     "options.add_argument(\"--disable-gpu\")  # Desativar o uso de GPU\n",
     "options.add_argument(\"--window-size=1920,1080\")  # Definir o tamanho da janela\n",
     "\n",
-    "scraper = PrecosRelativosDataScraper(setor_financeiro, options, service, acoes=codigos_ibovespa, diretorio='../dados/precos_relativos.csv')\n",
+    "scraper = SetorDataScraper(setor_financeiro, options, service, acoes=codigos_ibovespa)\n",
     "\n",
-    "dados = scraper.rodar_acoes()\n",
-    "\n",
-    "\n",
-    "\n"
+    "dados = scraper.rodar_acoes()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -72,344 +69,51 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>datas</th>\n",
-       "      <th>preco_lucro</th>\n",
-       "      <th>preco_vpa</th>\n",
-       "      <th>preco_receita_liquida</th>\n",
-       "      <th>preco_fco</th>\n",
-       "      <th>preco_fcf</th>\n",
-       "      <th>preco_ativo_total</th>\n",
-       "      <th>preco_ebit</th>\n",
-       "      <th>preco_capital_giro</th>\n",
-       "      <th>preco_ncav</th>\n",
-       "      <th>ev_ebit</th>\n",
-       "      <th>ev_ebitda</th>\n",
-       "      <th>ev_receita_liquida</th>\n",
-       "      <th>ev_fco</th>\n",
-       "      <th>ev_fcf</th>\n",
-       "      <th>ev_atito_total</th>\n",
-       "      <th>market_cap_empresa</th>\n",
-       "      <th>enterprise_value</th>\n",
-       "      <th>dividend_yield</th>\n",
+       "      <th>segmento_listagem</th>\n",
+       "      <th>setor</th>\n",
+       "      <th>segmento</th>\n",
        "      <th>tic</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>02/08/2024</td>\n",
-       "      <td>12.99</td>\n",
-       "      <td>1.96</td>\n",
-       "      <td>2.32</td>\n",
-       "      <td>7.21</td>\n",
-       "      <td>9.11</td>\n",
-       "      <td>1.30</td>\n",
-       "      <td>9.71</td>\n",
-       "      <td>50.58</td>\n",
-       "      <td>-4.21</td>\n",
-       "      <td>9.16</td>\n",
-       "      <td>6.94</td>\n",
-       "      <td>2.19</td>\n",
-       "      <td>6.80</td>\n",
-       "      <td>8.59</td>\n",
-       "      <td>1.23</td>\n",
-       "      <td>187040.0</td>\n",
-       "      <td>176350.0</td>\n",
-       "      <td>0.0615</td>\n",
+       "      <td>Tradicional - BOVESPA</td>\n",
+       "      <td>Consumo não Cíclico</td>\n",
+       "      <td>Cervejas e Refrigerantes</td>\n",
        "      <td>ABEV3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>30/06/2024</td>\n",
-       "      <td>12.85</td>\n",
-       "      <td>1.94</td>\n",
-       "      <td>2.29</td>\n",
-       "      <td>7.13</td>\n",
-       "      <td>9.01</td>\n",
-       "      <td>1.29</td>\n",
-       "      <td>9.61</td>\n",
-       "      <td>50.02</td>\n",
-       "      <td>-4.16</td>\n",
-       "      <td>9.05</td>\n",
-       "      <td>6.86</td>\n",
-       "      <td>2.16</td>\n",
-       "      <td>6.72</td>\n",
-       "      <td>8.49</td>\n",
-       "      <td>1.22</td>\n",
-       "      <td>184990.0</td>\n",
-       "      <td>174300.0</td>\n",
-       "      <td>0.0622</td>\n",
-       "      <td>ABEV3</td>\n",
+       "      <td>Nível 2 de Governança Corporativa</td>\n",
+       "      <td>Bens Industriais</td>\n",
+       "      <td>Transporte Aéreo</td>\n",
+       "      <td>AZUL4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>31/03/2024</td>\n",
-       "      <td>13.22</td>\n",
-       "      <td>2.21</td>\n",
-       "      <td>2.41</td>\n",
-       "      <td>7.37</td>\n",
-       "      <td>9.44</td>\n",
-       "      <td>1.43</td>\n",
-       "      <td>10.28</td>\n",
-       "      <td>-809.80</td>\n",
-       "      <td>-4.04</td>\n",
-       "      <td>9.80</td>\n",
-       "      <td>7.38</td>\n",
-       "      <td>2.30</td>\n",
-       "      <td>7.03</td>\n",
-       "      <td>9.00</td>\n",
-       "      <td>1.37</td>\n",
-       "      <td>191770.0</td>\n",
-       "      <td>182740.0</td>\n",
-       "      <td>0.0600</td>\n",
-       "      <td>ABEV3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>31/12/2023</td>\n",
-       "      <td>13.67</td>\n",
-       "      <td>2.51</td>\n",
-       "      <td>2.49</td>\n",
-       "      <td>8.02</td>\n",
-       "      <td>10.51</td>\n",
-       "      <td>1.49</td>\n",
-       "      <td>10.63</td>\n",
-       "      <td>-44.62</td>\n",
-       "      <td>-3.41</td>\n",
-       "      <td>9.96</td>\n",
-       "      <td>7.53</td>\n",
-       "      <td>2.33</td>\n",
-       "      <td>7.51</td>\n",
-       "      <td>9.84</td>\n",
-       "      <td>1.40</td>\n",
-       "      <td>198180.0</td>\n",
-       "      <td>185630.0</td>\n",
-       "      <td>0.0580</td>\n",
-       "      <td>ABEV3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>30/09/2023</td>\n",
-       "      <td>13.43</td>\n",
-       "      <td>2.24</td>\n",
-       "      <td>2.46</td>\n",
-       "      <td>8.97</td>\n",
-       "      <td>11.97</td>\n",
-       "      <td>1.47</td>\n",
-       "      <td>10.88</td>\n",
-       "      <td>54.65</td>\n",
-       "      <td>-4.61</td>\n",
-       "      <td>10.14</td>\n",
-       "      <td>7.64</td>\n",
-       "      <td>2.29</td>\n",
-       "      <td>8.37</td>\n",
-       "      <td>11.16</td>\n",
-       "      <td>1.37</td>\n",
-       "      <td>202590.0</td>\n",
-       "      <td>188900.0</td>\n",
-       "      <td>0.0593</td>\n",
-       "      <td>ABEV3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>60</th>\n",
-       "      <td>30/06/2009</td>\n",
-       "      <td>70.40</td>\n",
-       "      <td>2.68</td>\n",
-       "      <td>36.01</td>\n",
-       "      <td>33.08</td>\n",
-       "      <td>34.12</td>\n",
-       "      <td>2.51</td>\n",
-       "      <td>87.62</td>\n",
-       "      <td>38.74</td>\n",
-       "      <td>-2.138.78</td>\n",
-       "      <td>83.74</td>\n",
-       "      <td>NA</td>\n",
-       "      <td>34.41</td>\n",
-       "      <td>31.62</td>\n",
-       "      <td>32.61</td>\n",
-       "      <td>2.39</td>\n",
-       "      <td>52450.0</td>\n",
-       "      <td>50130.0</td>\n",
-       "      <td>0.0176</td>\n",
-       "      <td>B3SA3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>61</th>\n",
-       "      <td>31/03/2009</td>\n",
-       "      <td>60.11</td>\n",
-       "      <td>2.69</td>\n",
-       "      <td>27.34</td>\n",
-       "      <td>25.94</td>\n",
-       "      <td>26.67</td>\n",
-       "      <td>2.47</td>\n",
-       "      <td>72.67</td>\n",
-       "      <td>46.12</td>\n",
-       "      <td>-86.97</td>\n",
-       "      <td>69.09</td>\n",
-       "      <td>NA</td>\n",
-       "      <td>25.99</td>\n",
-       "      <td>24.66</td>\n",
-       "      <td>25.36</td>\n",
-       "      <td>2.35</td>\n",
-       "      <td>52450.0</td>\n",
-       "      <td>49860.0</td>\n",
-       "      <td>0.0176</td>\n",
-       "      <td>B3SA3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>62</th>\n",
-       "      <td>31/12/2008</td>\n",
-       "      <td>81.24</td>\n",
-       "      <td>2.72</td>\n",
-       "      <td>32.74</td>\n",
-       "      <td>26.84</td>\n",
-       "      <td>27.53</td>\n",
-       "      <td>2.57</td>\n",
-       "      <td>94.69</td>\n",
-       "      <td>58.95</td>\n",
-       "      <td>-210.94</td>\n",
-       "      <td>91.47</td>\n",
-       "      <td>NA</td>\n",
-       "      <td>31.63</td>\n",
-       "      <td>25.93</td>\n",
-       "      <td>26.59</td>\n",
-       "      <td>2.48</td>\n",
-       "      <td>52450.0</td>\n",
-       "      <td>50670.0</td>\n",
-       "      <td>0.0176</td>\n",
-       "      <td>B3SA3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>63</th>\n",
-       "      <td>30/09/2008</td>\n",
-       "      <td>NA</td>\n",
-       "      <td>2.69</td>\n",
-       "      <td>NA</td>\n",
-       "      <td>NA</td>\n",
-       "      <td>NA</td>\n",
-       "      <td>2.53</td>\n",
-       "      <td>NA</td>\n",
-       "      <td>40.42</td>\n",
-       "      <td>688.87</td>\n",
-       "      <td>NA</td>\n",
-       "      <td>NA</td>\n",
-       "      <td>NA</td>\n",
-       "      <td>NA</td>\n",
-       "      <td>NA</td>\n",
-       "      <td>2.44</td>\n",
-       "      <td>52450.0</td>\n",
-       "      <td>50540.0</td>\n",
-       "      <td>0.0176</td>\n",
-       "      <td>B3SA3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>64</th>\n",
-       "      <td>30/06/2008</td>\n",
-       "      <td>NA</td>\n",
-       "      <td>2.67</td>\n",
-       "      <td>NA</td>\n",
-       "      <td>NA</td>\n",
-       "      <td>NA</td>\n",
-       "      <td>2.46</td>\n",
-       "      <td>NA</td>\n",
-       "      <td>33.22</td>\n",
-       "      <td>-770.99</td>\n",
-       "      <td>NA</td>\n",
-       "      <td>NA</td>\n",
-       "      <td>NA</td>\n",
-       "      <td>NA</td>\n",
-       "      <td>NA</td>\n",
-       "      <td>2.35</td>\n",
-       "      <td>52370.0</td>\n",
-       "      <td>50070.0</td>\n",
-       "      <td>0.0176</td>\n",
+       "      <td>Novo Mercado</td>\n",
+       "      <td>Financeiro</td>\n",
+       "      <td>Serviços Financeiros Diversos</td>\n",
        "      <td>B3SA3</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>144 rows × 20 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "         datas preco_lucro preco_vpa preco_receita_liquida preco_fco  \\\n",
-       "0   02/08/2024       12.99      1.96                  2.32      7.21   \n",
-       "1   30/06/2024       12.85      1.94                  2.29      7.13   \n",
-       "2   31/03/2024       13.22      2.21                  2.41      7.37   \n",
-       "3   31/12/2023       13.67      2.51                  2.49      8.02   \n",
-       "4   30/09/2023       13.43      2.24                  2.46      8.97   \n",
-       "..         ...         ...       ...                   ...       ...   \n",
-       "60  30/06/2009       70.40      2.68                 36.01     33.08   \n",
-       "61  31/03/2009       60.11      2.69                 27.34     25.94   \n",
-       "62  31/12/2008       81.24      2.72                 32.74     26.84   \n",
-       "63  30/09/2008          NA      2.69                    NA        NA   \n",
-       "64  30/06/2008          NA      2.67                    NA        NA   \n",
+       "                   segmento_listagem                setor  \\\n",
+       "0              Tradicional - BOVESPA  Consumo não Cíclico   \n",
+       "1  Nível 2 de Governança Corporativa     Bens Industriais   \n",
+       "2                       Novo Mercado           Financeiro   \n",
        "\n",
-       "   preco_fcf preco_ativo_total preco_ebit preco_capital_giro preco_ncav  \\\n",
-       "0       9.11              1.30       9.71              50.58      -4.21   \n",
-       "1       9.01              1.29       9.61              50.02      -4.16   \n",
-       "2       9.44              1.43      10.28            -809.80      -4.04   \n",
-       "3      10.51              1.49      10.63             -44.62      -3.41   \n",
-       "4      11.97              1.47      10.88              54.65      -4.61   \n",
-       "..       ...               ...        ...                ...        ...   \n",
-       "60     34.12              2.51      87.62              38.74  -2.138.78   \n",
-       "61     26.67              2.47      72.67              46.12     -86.97   \n",
-       "62     27.53              2.57      94.69              58.95    -210.94   \n",
-       "63        NA              2.53         NA              40.42     688.87   \n",
-       "64        NA              2.46         NA              33.22    -770.99   \n",
-       "\n",
-       "   ev_ebit ev_ebitda ev_receita_liquida ev_fco ev_fcf ev_atito_total  \\\n",
-       "0     9.16      6.94               2.19   6.80   8.59           1.23   \n",
-       "1     9.05      6.86               2.16   6.72   8.49           1.22   \n",
-       "2     9.80      7.38               2.30   7.03   9.00           1.37   \n",
-       "3     9.96      7.53               2.33   7.51   9.84           1.40   \n",
-       "4    10.14      7.64               2.29   8.37  11.16           1.37   \n",
-       "..     ...       ...                ...    ...    ...            ...   \n",
-       "60   83.74        NA              34.41  31.62  32.61           2.39   \n",
-       "61   69.09        NA              25.99  24.66  25.36           2.35   \n",
-       "62   91.47        NA              31.63  25.93  26.59           2.48   \n",
-       "63      NA        NA                 NA     NA     NA           2.44   \n",
-       "64      NA        NA                 NA     NA     NA           2.35   \n",
-       "\n",
-       "    market_cap_empresa  enterprise_value  dividend_yield    tic  \n",
-       "0             187040.0          176350.0          0.0615  ABEV3  \n",
-       "1             184990.0          174300.0          0.0622  ABEV3  \n",
-       "2             191770.0          182740.0          0.0600  ABEV3  \n",
-       "3             198180.0          185630.0          0.0580  ABEV3  \n",
-       "4             202590.0          188900.0          0.0593  ABEV3  \n",
-       "..                 ...               ...             ...    ...  \n",
-       "60             52450.0           50130.0          0.0176  B3SA3  \n",
-       "61             52450.0           49860.0          0.0176  B3SA3  \n",
-       "62             52450.0           50670.0          0.0176  B3SA3  \n",
-       "63             52450.0           50540.0          0.0176  B3SA3  \n",
-       "64             52370.0           50070.0          0.0176  B3SA3  \n",
-       "\n",
-       "[144 rows x 20 columns]"
+       "                        segmento    tic  \n",
+       "0       Cervejas e Refrigerantes  ABEV3  \n",
+       "1               Transporte Aéreo  AZUL4  \n",
+       "2  Serviços Financeiros Diversos  B3SA3  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
