Adcionando assincronomo_precos_relativos

--- a/Notebooks/precos_relativos_invesrsite.ipynb
+++ b/Notebooks/precos_relativos_invesrsite.ipynb
@@ -1704,7 +1704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "dfb5333f-e627-4dee-a39e-80191b722d51",
    "metadata": {
     "tags": []
@@ -1740,6 +1740,27 @@
     "                     ]\n",
     "\n",
     "scraper = PrecosRelativosDataScraper(setor_financeiro, options, service, acoes=codigos_ibovespa, diretorio='../dados/precos_relativos.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "5b9822b9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "selenium.webdriver.chrome.options.Options"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(options)"
    ]
   },
   {
@@ -2238,7 +2259,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0eb9c0e8",
+   "id": "77ab6c2c",
    "metadata": {},
    "outputs": [],
    "source": []
