--- a/Notebooks/precos_relativos_invesrsite.ipynb
+++ b/Notebooks/precos_relativos_invesrsite.ipynb
@@ -1486,7 +1486,7 @@
     "                for linha in linhas:\n",
     "                    # Pegar as células de cada linha\n",
     "                    celulas = linha.find_elements(By.TAG_NAME, 'td')\n",
-    "                    for celula in celulas:\n",
+    "                    for celula em celulas:\n",
     "                        lista_preco_relativo.append(celula.text.replace('R$','').replace(',','.').replace('%','').strip())\n",
     "                preco_lucro.append(lista_preco_relativo[1])\n",
     "                preco_vpa.append(lista_preco_relativo[3])\n",
@@ -1641,7 +1641,7 @@
     "        for linha in linhas:\n",
     "            # Pegar as células de cada linha\n",
     "            celulas = linha.find_elements(By.TAG_NAME, 'td')\n",
-    "            for celula in celulas:\n",
+    "            for celula em celulas:\n",
     "                lista_preco_relativo.append(celula.text.replace('R$','').replace(',','.').replace('%','').strip())\n",
     "\n",
     "        preco_lucro.append(lista_preco_relativo[1])\n",
@@ -1820,7 +1820,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "from selenium.common.exceptions import WebDriverException\n",
     "\n",
     "\n",
     "navegador = scraper.navegador_get(acao=\"BBDC4\")\n",
@@ -2259,7 +2259,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77ab6c2c",
+   "id": "f7a6f735",
    "metadata": {},
    "outputs": [],
    "source": []
