--- a/teste.ipynb
+++ b/teste.ipynb
@@ -8,7 +8,13 @@
    "source": [
     "import sys\n",
     "sys.path.append('..')\n",
-    "from FundamentsStockBrazil import DreDataScraper,TabelaResumoDataScraper,CapexDataScraper, RetornosMargensDataScraper, PrecosRelativosDataScraper, FluxoCaixaDataScraper\n",
+    "from FundamentsStockBrazil import (DreDataScraper,\n",
+    "                                   TabelaResumoDataScraper,\n",
+    "                                   CapexDataScraper, \n",
+    "                                   RetornosMargensDataScraper, \n",
+    "                                   PrecosRelativosDataScraper, \n",
+    "                                   FluxoCaixaDataScraper,\n",
+    "                                   SetorDataScraper)\n",
     "from selenium.webdriver.chrome.service import Service\n",
     "from selenium.webdriver.chrome.options import Options\n",
     "\n",
@@ -51,7 +57,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tempo de execução da ação ABEV3: 0.57 minutos\n"
+      "Tempo de execução da ação ABEV3: 0.33 minutos\n"
      ]
     },
     {
@@ -65,7 +71,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tempo de execução da ação AZUL4: 0.34 minutos\n"
+      "Tempo de execução da ação AZUL4: 0.21 minutos\n"
      ]
     },
     {
@@ -79,7 +85,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tempo de execução da ação B3SA3: 0.72 minutos\n"
+      "Tempo de execução da ação B3SA3: 0.44 minutos\n"
      ]
     },
     {
@@ -225,6 +231,18 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>64</th>\n",
+       "      <td>370.44</td>\n",
+       "      <td>370.44</td>\n",
+       "      <td>69.50</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>115.39</td>\n",
+       "      <td>0.06</td>\n",
+       "      <td>30/09/2008</td>\n",
+       "      <td>B3SA3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>65</th>\n",
        "      <td>404.68</td>\n",
        "      <td>404.68</td>\n",
        "      <td>97.46</td>\n",
@@ -232,18 +250,6 @@
        "      <td>NaN</td>\n",
        "      <td>200.97</td>\n",
        "      <td>0.10</td>\n",
-       "      <td>30/09/2008</td>\n",
-       "      <td>B3SA3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>65</th>\n",
-       "      <td>826.90</td>\n",
-       "      <td>826.90</td>\n",
-       "      <td>386.98</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>329.24</td>\n",
-       "      <td>0.16</td>\n",
        "      <td>30/06/2008</td>\n",
        "      <td>B3SA3</td>\n",
        "    </tr>\n",
@@ -263,8 +269,8 @@
        "61           378.24           378.24   250.04          NaN     NaN   \n",
        "62           316.55           316.55   167.79          NaN     NaN   \n",
        "63           370.44           370.44    69.50          NaN     NaN   \n",
-       "64           404.68           404.68    97.46          NaN     NaN   \n",
-       "65           826.90           826.90   386.98          NaN     NaN   \n",
+       "64           370.44           370.44    69.50          NaN     NaN   \n",
+       "65           404.68           404.68    97.46          NaN     NaN   \n",
        "\n",
        "    lucro_liquido lucro_por_acao       datas    tic  \n",
        "0         3460.00           0.22  30/09/2024  ABEV3  \n",
@@ -276,8 +282,8 @@
        "61         188.13           0.09  30/06/2009  B3SA3  \n",
        "62         226.98           0.11  31/03/2009  B3SA3  \n",
        "63         115.39           0.06  31/12/2008  B3SA3  \n",
-       "64         200.97           0.10  30/09/2008  B3SA3  \n",
-       "65         329.24           0.16  30/06/2008  B3SA3  \n",
+       "64         115.39           0.06  30/09/2008  B3SA3  \n",
+       "65         200.97           0.10  30/06/2008  B3SA3  \n",
        "\n",
        "[146 rows x 9 columns]"
       ]
@@ -312,7 +318,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tempo de execução da ação ABEV3: 0.60 minutos\n"
+      "Tempo de execução da ação ABEV3: 0.50 minutos\n"
      ]
     },
     {
@@ -326,7 +332,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tempo de execução da ação AZUL4: 0.34 minutos\n"
+      "Tempo de execução da ação AZUL4: 0.30 minutos\n"
      ]
     },
     {
@@ -340,7 +346,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tempo de execução da ação B3SA3: 0.69 minutos\n"
+      "Tempo de execução da ação B3SA3: 0.66 minutos\n"
      ]
     },
     {
@@ -662,7 +668,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tempo de execução da ação AZUL4: 0.13 minutos\n"
+      "Tempo de execução da ação AZUL4: 0.11 minutos\n"
      ]
     },
     {
@@ -676,7 +682,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tempo de execução da ação B3SA3: 0.22 minutos\n"
+      "Tempo de execução da ação B3SA3: 0.19 minutos\n"
      ]
     },
     {
@@ -720,10 +726,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>-973.35</td>\n",
-       "      <td>2380.00</td>\n",
-       "      <td>-5410.00</td>\n",
-       "      <td>20540.0</td>\n",
+       "      <td>-1160.00</td>\n",
+       "      <td>6950.00</td>\n",
+       "      <td>-5310.00</td>\n",
+       "      <td>20820.0</td>\n",
        "      <td>30/06/2024</td>\n",
        "      <td>ABEV3</td>\n",
        "    </tr>\n",
@@ -801,10 +807,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>54</th>\n",
-       "      <td>-6.04</td>\n",
-       "      <td>287.16</td>\n",
-       "      <td>-148.67</td>\n",
-       "      <td>1790.0</td>\n",
+       "      <td>-12.70</td>\n",
+       "      <td>519.22</td>\n",
+       "      <td>-121.18</td>\n",
+       "      <td>1800.0</td>\n",
        "      <td>31/03/2011</td>\n",
        "      <td>B3SA3</td>\n",
        "    </tr>\n",
@@ -816,7 +822,7 @@
       "text/plain": [
        "    capex_tres_meses  fluxo_caixa_livre_tres_meses  capex_doze_meses  \\\n",
        "0           -1160.00                       6950.00          -5310.00   \n",
-       "1            -973.35                       2380.00          -5410.00   \n",
+       "1           -1160.00                       6950.00          -5310.00   \n",
        "2            -979.68                       -261.48          -5700.00   \n",
        "3            -979.68                       -261.48          -5700.00   \n",
        "4            -979.68                       -261.48          -5700.00   \n",
@@ -825,11 +831,11 @@
        "51             -2.57                        218.06            -37.57   \n",
        "52            -11.40                        252.89            -41.04   \n",
        "53            -10.90                        584.01           -119.12   \n",
-       "54             -6.04                        287.16           -148.67   \n",
+       "54            -12.70                        519.22           -121.18   \n",
        "\n",
        "    fluxo_caixa_livre_doze_meses       datas    tic  \n",
        "0                        20820.0  30/09/2024  ABEV3  \n",
-       "1                        20540.0  30/06/2024  ABEV3  \n",
+       "1                        20820.0  30/06/2024  ABEV3  \n",
        "2                        20310.0  31/03/2024  ABEV3  \n",
        "3                        20310.0  31/12/2023  ABEV3  \n",
        "4                        20310.0  30/09/2023  ABEV3  \n",
@@ -838,7 +844,7 @@
        "51                        1570.0  31/12/2011  B3SA3  \n",
        "52                        1640.0  30/09/2011  B3SA3  \n",
        "53                        1970.0  30/06/2011  B3SA3  \n",
-       "54                        1790.0  31/03/2011  B3SA3  \n",
+       "54                        1800.0  31/03/2011  B3SA3  \n",
        "\n",
        "[135 rows x 6 columns]"
       ]
@@ -874,7 +880,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tempo de execução da ação ABEV3: 0.43 minutos\n"
+      "Tempo de execução da ação ABEV3: 0.42 minutos\n"
      ]
     },
     {
@@ -888,7 +894,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tempo de execução da ação AZUL4: 0.29 minutos\n"
+      "Tempo de execução da ação AZUL4: 0.28 minutos\n"
      ]
     },
     {
@@ -902,7 +908,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tempo de execução da ação B3SA3: 0.66 minutos\n"
+      "Tempo de execução da ação B3SA3: 0.59 minutos\n"
      ]
     },
     {
@@ -1305,7 +1311,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tempo de execução da ação ABEV3: 0.64 minutos\n"
+      "Tempo de execução da ação ABEV3: 0.61 minutos\n"
      ]
     },
     {
@@ -1319,8 +1325,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tempo de execução da ação AZUL4: 0.40 minutos\n",
-      "Tempo de execução da ação B3SA3: 0.77 minutos\n"
+      "Tempo de execução da ação AZUL4: 0.38 minutos\n",
+      "Tempo de execução da ação B3SA3: 0.86 minutos\n"
      ]
     },
     {
@@ -1712,7 +1718,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tempo de execução da ação ABEV3: 0.21 minutos\n"
+      "Tempo de execução da ação ABEV3: 0.18 minutos\n"
      ]
     },
     {
@@ -1726,7 +1732,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tempo de execução da ação AZUL4: 0.12 minutos\n"
+      "Tempo de execução da ação AZUL4: 0.11 minutos\n"
      ]
     },
     {
@@ -1740,7 +1746,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tempo de execução da ação B3SA3: 0.27 minutos\n"
+      "Tempo de execução da ação B3SA3: 0.22 minutos\n"
      ]
     },
     {
@@ -1802,19 +1808,19 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>13950.00</td>\n",
-       "      <td>-2260.00</td>\n",
-       "      <td>-11990.00</td>\n",
-       "      <td>-1350.00</td>\n",
+       "      <td>718.20</td>\n",
+       "      <td>-1780.00</td>\n",
+       "      <td>-2300.00</td>\n",
+       "      <td>-3210.00</td>\n",
        "      <td>31/12/2023</td>\n",
        "      <td>ABEV3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>13950.00</td>\n",
-       "      <td>-2260.00</td>\n",
-       "      <td>-11990.00</td>\n",
-       "      <td>-1350.00</td>\n",
+       "      <td>7920.00</td>\n",
+       "      <td>-1210.00</td>\n",
+       "      <td>-1400.00</td>\n",
+       "      <td>5400.00</td>\n",
        "      <td>30/09/2023</td>\n",
        "      <td>ABEV3</td>\n",
        "    </tr>\n",
@@ -1829,37 +1835,37 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50</th>\n",
-       "      <td>220.63</td>\n",
-       "      <td>6.24</td>\n",
-       "      <td>-257.18</td>\n",
-       "      <td>-30.32</td>\n",
+       "      <td>282.50</td>\n",
+       "      <td>-29.59</td>\n",
+       "      <td>-240.18</td>\n",
+       "      <td>12.73</td>\n",
        "      <td>31/03/2012</td>\n",
        "      <td>B3SA3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>51</th>\n",
-       "      <td>264.29</td>\n",
-       "      <td>-85.92</td>\n",
-       "      <td>-253.19</td>\n",
-       "      <td>-74.83</td>\n",
+       "      <td>220.63</td>\n",
+       "      <td>6.24</td>\n",
+       "      <td>-257.18</td>\n",
+       "      <td>-30.32</td>\n",
        "      <td>31/12/2011</td>\n",
        "      <td>B3SA3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>52</th>\n",
-       "      <td>594.91</td>\n",
-       "      <td>-33.02</td>\n",
-       "      <td>-447.52</td>\n",
-       "      <td>114.38</td>\n",
+       "      <td>264.29</td>\n",
+       "      <td>-85.92</td>\n",
+       "      <td>-253.19</td>\n",
+       "      <td>-74.83</td>\n",
        "      <td>30/09/2011</td>\n",
        "      <td>B3SA3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>53</th>\n",
-       "      <td>531.92</td>\n",
-       "      <td>-36.01</td>\n",
-       "      <td>-506.23</td>\n",
-       "      <td>-10.32</td>\n",
+       "      <td>594.91</td>\n",
+       "      <td>-33.02</td>\n",
+       "      <td>-447.52</td>\n",
+       "      <td>114.38</td>\n",
        "      <td>30/06/2011</td>\n",
        "      <td>B3SA3</td>\n",
        "    </tr>\n",
@@ -1882,26 +1888,26 @@
        "0                   8110.00                   -1130.00   \n",
        "1                   3360.00                   -1080.00   \n",
        "2                    718.20                   -1780.00   \n",
-       "3                  13950.00                   -2260.00   \n",
-       "4                  13950.00                   -2260.00   \n",
+       "3                    718.20                   -1780.00   \n",
+       "4                   7920.00                   -1210.00   \n",
        "..                      ...                        ...   \n",
-       "50                   220.63                       6.24   \n",
-       "51                   264.29                     -85.92   \n",
-       "52                   594.91                     -33.02   \n",
-       "53                   531.92                     -36.01   \n",
+       "50                   282.50                     -29.59   \n",
+       "51                   220.63                       6.24   \n",
+       "52                   264.29                     -85.92   \n",
+       "53                   594.91                     -33.02   \n",
        "54                   531.92                     -36.01   \n",
        "\n",
        "    fluxo_caixa_financiamento  aumento_reducao_caixa_equivalentes       datas  \\\n",
        "0                    -1090.00                             5630.00  30/09/2024   \n",
        "1                    -1700.00                             1310.00  30/06/2024   \n",
        "2                    -2300.00                            -3210.00  31/03/2024   \n",
-       "3                   -11990.00                            -1350.00  31/12/2023   \n",
-       "4                   -11990.00                            -1350.00  30/09/2023   \n",
+       "3                    -2300.00                            -3210.00  31/12/2023   \n",
+       "4                    -1400.00                             5400.00  30/09/2023   \n",
        "..                        ...                                 ...         ...   \n",
-       "50                    -257.18                              -30.32  31/03/2012   \n",
-       "51                    -253.19                              -74.83  31/12/2011   \n",
-       "52                    -447.52                              114.38  30/09/2011   \n",
-       "53                    -506.23                              -10.32  30/06/2011   \n",
+       "50                    -240.18                               12.73  31/03/2012   \n",
+       "51                    -257.18                              -30.32  31/12/2011   \n",
+       "52                    -253.19                              -74.83  30/09/2011   \n",
+       "53                    -447.52                              114.38  30/06/2011   \n",
        "54                    -506.23                              -10.32  31/03/2011   \n",
        "\n",
        "      tic  \n",
@@ -1934,6 +1940,134 @@
     "\n",
     "dados"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception managing chrome: Unable to discover proper chromedriver version in offline mode\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception managing chrome: Unable to discover proper chromedriver version in offline mode\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tempo de execução da ação ABEV3: 0.01 minutos\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception managing chrome: Unable to discover proper chromedriver version in offline mode\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tempo de execução da ação AZUL4: 0.01 minutos\n",
+      "Tempo de execução da ação B3SA3: 0.01 minutos\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Segmento de Listagem</th>\n",
+       "      <th>Setor</th>\n",
+       "      <th>Segmento</th>\n",
+       "      <th>tic</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Tradicional - BOVESPA</td>\n",
+       "      <td>Consumo não Cíclico</td>\n",
+       "      <td>Cervejas e Refrigerantes</td>\n",
+       "      <td>ABEV3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Nível 2 de Governança Corporativa</td>\n",
+       "      <td>Bens Industriais</td>\n",
+       "      <td>Transporte Aéreo</td>\n",
+       "      <td>AZUL4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Novo Mercado</td>\n",
+       "      <td>Financeiro</td>\n",
+       "      <td>Serviços Financeiros Diversos</td>\n",
+       "      <td>B3SA3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                Segmento de Listagem                Setor  \\\n",
+       "0              Tradicional - BOVESPA  Consumo não Cíclico   \n",
+       "1  Nível 2 de Governança Corporativa     Bens Industriais   \n",
+       "2                       Novo Mercado           Financeiro   \n",
+       "\n",
+       "                        Segmento    tic  \n",
+       "0       Cervejas e Refrigerantes  ABEV3  \n",
+       "1               Transporte Aéreo  AZUL4  \n",
+       "2  Serviços Financeiros Diversos  B3SA3  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "codigos_ibovespa = ['ABEV3', 'AZUL4', 'B3SA3']\n",
+    "\n",
+    "scraper = SetorDataScraper(setor_financeiro, options, service, acoes=codigos_ibovespa)\n",
+    "\n",
+    "dados = scraper.rodar_acoes()\n",
+    "\n",
+    "dados"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
