--- a/teste.ipynb
+++ b/teste.ipynb
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +318,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tempo de execução da ação ABEV3: 0.50 minutos\n"
+      "Código de negociação ##ABEV3 não encontrado.\n"
      ]
     },
     {
@@ -332,7 +332,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tempo de execução da ação AZUL4: 0.30 minutos\n"
+      "Tempo de execução da ação AZUL4: 0.38 minutos\n"
      ]
     },
     {
@@ -346,7 +346,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tempo de execução da ação B3SA3: 0.66 minutos\n"
+      "Tempo de execução da ação B3SA3: 0.82 minutos\n"
      ]
     },
     {
@@ -388,83 +388,83 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>19780.0</td>\n",
-       "      <td>147290.0</td>\n",
-       "      <td>1210.00</td>\n",
-       "      <td>2170.00</td>\n",
-       "      <td>3380.00</td>\n",
-       "      <td>-16400.0</td>\n",
-       "      <td>98140.0</td>\n",
-       "      <td>6.23</td>\n",
-       "      <td>15.757.657.000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>15.757.657.000</td>\n",
+       "      <td>1080.0</td>\n",
+       "      <td>23400.0</td>\n",
+       "      <td>6420.00</td>\n",
+       "      <td>23940.00</td>\n",
+       "      <td>30370.00</td>\n",
+       "      <td>29280.0</td>\n",
+       "      <td>-26040.0</td>\n",
+       "      <td>-  20.59</td>\n",
+       "      <td>928.965.058</td>\n",
+       "      <td>335.750.796</td>\n",
+       "      <td>1.264.715.854</td>\n",
        "      <td>30/09/2024</td>\n",
-       "      <td>ABEV3</td>\n",
+       "      <td>AZUL4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>14150.0</td>\n",
-       "      <td>143440.0</td>\n",
-       "      <td>1240.00</td>\n",
-       "      <td>2210.00</td>\n",
-       "      <td>3460.00</td>\n",
-       "      <td>-10700.0</td>\n",
-       "      <td>95260.0</td>\n",
-       "      <td>6.05</td>\n",
-       "      <td>15.757.657.000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>15.757.657.000</td>\n",
+       "      <td>1440.0</td>\n",
+       "      <td>22830.0</td>\n",
+       "      <td>6020.00</td>\n",
+       "      <td>24490.00</td>\n",
+       "      <td>30510.00</td>\n",
+       "      <td>29070.0</td>\n",
+       "      <td>-26170.0</td>\n",
+       "      <td>-  20.69</td>\n",
+       "      <td>928.965.058</td>\n",
+       "      <td>335.750.796</td>\n",
+       "      <td>1.264.715.854</td>\n",
        "      <td>30/06/2024</td>\n",
-       "      <td>ABEV3</td>\n",
+       "      <td>AZUL4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>12840.0</td>\n",
-       "      <td>133820.0</td>\n",
-       "      <td>1650.00</td>\n",
-       "      <td>2170.00</td>\n",
-       "      <td>3820.00</td>\n",
-       "      <td>-9030.0</td>\n",
-       "      <td>86590.0</td>\n",
-       "      <td>5.50</td>\n",
-       "      <td>15.757.657.000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>15.757.657.000</td>\n",
+       "      <td>1340.0</td>\n",
+       "      <td>20900.0</td>\n",
+       "      <td>4970.00</td>\n",
+       "      <td>22610.00</td>\n",
+       "      <td>27580.00</td>\n",
+       "      <td>26240.0</td>\n",
+       "      <td>-22370.0</td>\n",
+       "      <td>-  17.69</td>\n",
+       "      <td>928.965.058</td>\n",
+       "      <td>335.750.796</td>\n",
+       "      <td>1.264.715.854</td>\n",
        "      <td>31/03/2024</td>\n",
-       "      <td>ABEV3</td>\n",
+       "      <td>AZUL4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>16060.0</td>\n",
-       "      <td>132640.0</td>\n",
-       "      <td>1300.00</td>\n",
-       "      <td>2200.00</td>\n",
-       "      <td>3500.00</td>\n",
-       "      <td>-12560.0</td>\n",
-       "      <td>78970.0</td>\n",
-       "      <td>5.01</td>\n",
-       "      <td>15.753.833.000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>15.753.833.000</td>\n",
+       "      <td>1900.0</td>\n",
+       "      <td>20530.0</td>\n",
+       "      <td>4810.00</td>\n",
+       "      <td>20060.00</td>\n",
+       "      <td>24870.00</td>\n",
+       "      <td>22970.0</td>\n",
+       "      <td>-21330.0</td>\n",
+       "      <td>-  16.86</td>\n",
+       "      <td>928.965.058</td>\n",
+       "      <td>335.747.796</td>\n",
+       "      <td>1.264.712.854</td>\n",
        "      <td>31/12/2023</td>\n",
-       "      <td>ABEV3</td>\n",
+       "      <td>AZUL4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>17410.0</td>\n",
-       "      <td>137910.0</td>\n",
-       "      <td>1240.00</td>\n",
-       "      <td>2480.00</td>\n",
-       "      <td>3720.00</td>\n",
-       "      <td>-13700.0</td>\n",
-       "      <td>90250.0</td>\n",
-       "      <td>5.73</td>\n",
-       "      <td>15.753.833.000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>15.753.833.000</td>\n",
+       "      <td>1400.0</td>\n",
+       "      <td>19610.0</td>\n",
+       "      <td>4950.00</td>\n",
+       "      <td>21620.00</td>\n",
+       "      <td>26580.00</td>\n",
+       "      <td>25180.0</td>\n",
+       "      <td>-21290.0</td>\n",
+       "      <td>-  16.83</td>\n",
+       "      <td>928.965.058</td>\n",
+       "      <td>335.747.796</td>\n",
+       "      <td>1.264.712.854</td>\n",
        "      <td>30/09/2023</td>\n",
-       "      <td>ABEV3</td>\n",
+       "      <td>AZUL4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -564,16 +564,16 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>146 rows × 13 columns</p>\n",
+       "<p>98 rows × 13 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "    caixa_equivalentes_caixa  ativo_total  divida_curto_prazo  \\\n",
-       "0                    19780.0     147290.0             1210.00   \n",
-       "1                    14150.0     143440.0             1240.00   \n",
-       "2                    12840.0     133820.0             1650.00   \n",
-       "3                    16060.0     132640.0             1300.00   \n",
-       "4                    17410.0     137910.0             1240.00   \n",
+       "0                     1080.0      23400.0             6420.00   \n",
+       "1                     1440.0      22830.0             6020.00   \n",
+       "2                     1340.0      20900.0             4970.00   \n",
+       "3                     1900.0      20530.0             4810.00   \n",
+       "4                     1400.0      19610.0             4950.00   \n",
        "..                       ...          ...                 ...   \n",
        "61                    2340.0      20940.0                8.22   \n",
        "62                    2590.0      21200.0                3.57   \n",
@@ -582,11 +582,11 @@
        "65                    2800.0      21270.0              502.73   \n",
        "\n",
        "    divida_longo_prazo  divida_bruta  divida_liquida  patrimonio_liquido  \\\n",
-       "0              2170.00       3380.00        -16400.0             98140.0   \n",
-       "1              2210.00       3460.00        -10700.0             95260.0   \n",
-       "2              2170.00       3820.00         -9030.0             86590.0   \n",
-       "3              2200.00       3500.00        -12560.0             78970.0   \n",
-       "4              2480.00       3720.00        -13700.0             90250.0   \n",
+       "0             23940.00      30370.00         29280.0            -26040.0   \n",
+       "1             24490.00      30510.00         29070.0            -26170.0   \n",
+       "2             22610.00      27580.00         26240.0            -22370.0   \n",
+       "3             20060.00      24870.00         22970.0            -21330.0   \n",
+       "4             21620.00      26580.00         25180.0            -21290.0   \n",
        "..                 ...           ...             ...                 ...   \n",
        "61                8.23         16.45         -2320.0             19560.0   \n",
        "62                 NaN          3.57         -2590.0             19460.0   \n",
@@ -594,36 +594,36 @@
        "64                 NaN        148.24         -1910.0             19530.0   \n",
        "65                 NaN        502.73         -2300.0             19630.0   \n",
        "\n",
-       "   valor_patrimonial_acao acoes_ordinarias acoes_preferenciais  \\\n",
-       "0                    6.23   15.757.657.000                   0   \n",
-       "1                    6.05   15.757.657.000                   0   \n",
-       "2                    5.50   15.757.657.000                   0   \n",
-       "3                    5.01   15.753.833.000                   0   \n",
-       "4                    5.73   15.753.833.000                   0   \n",
-       "..                    ...              ...                 ...   \n",
-       "61                   9.57    2.044.014.295                   0   \n",
-       "62                   9.52    2.044.014.295                   0   \n",
-       "63                   9.44    2.044.014.295                   0   \n",
-       "64                   9.56    2.044.014.295                   0   \n",
-       "65                   9.62    2.040.797.995                   0   \n",
+       "   valor_patrimonial_acao acoes_ordinarias acoes_preferenciais          total  \\\n",
+       "0                -  20.59      928.965.058         335.750.796  1.264.715.854   \n",
+       "1                -  20.69      928.965.058         335.750.796  1.264.715.854   \n",
+       "2                -  17.69      928.965.058         335.750.796  1.264.715.854   \n",
+       "3                -  16.86      928.965.058         335.747.796  1.264.712.854   \n",
+       "4                -  16.83      928.965.058         335.747.796  1.264.712.854   \n",
+       "..                    ...              ...                 ...            ...   \n",
+       "61                   9.57    2.044.014.295                   0  2.044.014.295   \n",
+       "62                   9.52    2.044.014.295                   0  2.044.014.295   \n",
+       "63                   9.44    2.044.014.295                   0  2.044.014.295   \n",
+       "64                   9.56    2.044.014.295                   0  2.044.014.295   \n",
+       "65                   9.62    2.040.797.995                   0  2.040.797.995   \n",
        "\n",
-       "             total       datas    tic  \n",
-       "0   15.757.657.000  30/09/2024  ABEV3  \n",
-       "1   15.757.657.000  30/06/2024  ABEV3  \n",
-       "2   15.757.657.000  31/03/2024  ABEV3  \n",
-       "3   15.753.833.000  31/12/2023  ABEV3  \n",
-       "4   15.753.833.000  30/09/2023  ABEV3  \n",
-       "..             ...         ...    ...  \n",
-       "61   2.044.014.295  30/06/2009  B3SA3  \n",
-       "62   2.044.014.295  31/03/2009  B3SA3  \n",
-       "63   2.044.014.295  31/12/2008  B3SA3  \n",
-       "64   2.044.014.295  30/09/2008  B3SA3  \n",
-       "65   2.040.797.995  30/06/2008  B3SA3  \n",
+       "         datas    tic  \n",
+       "0   30/09/2024  AZUL4  \n",
+       "1   30/06/2024  AZUL4  \n",
+       "2   31/03/2024  AZUL4  \n",
+       "3   31/12/2023  AZUL4  \n",
+       "4   30/09/2023  AZUL4  \n",
+       "..         ...    ...  \n",
+       "61  30/06/2009  B3SA3  \n",
+       "62  31/03/2009  B3SA3  \n",
+       "63  31/12/2008  B3SA3  \n",
+       "64  30/09/2008  B3SA3  \n",
+       "65  30/06/2008  B3SA3  \n",
        "\n",
-       "[146 rows x 13 columns]"
+       "[98 rows x 13 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
